--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,2 @@
 compile.on.save=true
-file.reference.iText.jar=C:\\Users\\Jhoan Sebasti\u00e1n\\Documents\\GitHub\\ProyectoEventos\\iText.jar
-user.properties.file=C:\\Users\\Jhoan Sebasti\u00e1n\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Iv\u00e1n\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
